--- a/css/style.css
+++ b/css/style.css
@@ -1791,6 +1791,15 @@
       @media (max-width: 600px) {
         .carousel1__slider--page--img {
           margin-left: -5%; } }
+      @media (max-width: 470px) {
+        .carousel1__slider--page--img {
+          margin-left: -10%; } }
+      @media (max-width: 400px) {
+        .carousel1__slider--page--img {
+          margin-left: -15%; } }
+      @media (max-width: 360px) {
+        .carousel1__slider--page--img {
+          margin-left: -20%; } }
     .carousel1__slider--page--text {
       color: #999999;
       font-family: 'Roboto', sans-serif;
