--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -51,6 +51,15 @@
         @media(max-width:600px){
           margin-left:-5%;
         }
+        @media(max-width:470px){
+          margin-left:-10%;
+        }
+        @media(max-width:400px){
+          margin-left:-15%;
+        }
+        @media(max-width:360px){
+          margin-left:-20%;
+        }
       }
       &--text {
         color: $color-grey-dark;
