--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,7 +1,3 @@
-
-body {
-  overflow-x: hidden;
-}
 .navbar-default {
     background-color: transparent;
     border-bottom-color: transparent;
@@ -13,12 +9,26 @@ body {
         color: white !important;
       }
     }
+  @media#{$xs-screen}
+  {
+    overflow-y: hidden;
+    li{
+        margin-bottom: 3%;
+        a{
+          background-color: $color-blue;
+        }
+      }
+      li:nth-child(8){
+        padding-bottom: 100%;
+      }
+    }
   }
+
   .navbar-arrow{
     border: solid white;
     border-width: 0 10px 10px 0;
-    display: inline-block;
     background-color: transparent;
+    text-align: right;
     padding: 10px;
     margin-right: 10px;
     transform: rotate(-45deg);
@@ -38,10 +48,29 @@ body {
         }
       }
     }
-
   }
+
+@media only screen and (max-width:767px){
+  .menu__link:before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 10px;
+    height: 2px;
+    background: white;
+    transform: translateX(-50%);
+    transition: all .4s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu__link:hover:before{
+    width: 20%;
+  }
+}
+
 .navbar-collapse{
   border-top-color: $color-blue!important;
+  @media only screen and (max-width:767px){
+  box-shadow: inset 0 50px 0 $color-blue;}
 }
 .navbar-xs{
   background-color: $color-blue;
@@ -60,31 +89,14 @@ body {
   }
 
 
-  @media#{$xs-screen}{
-    .navbar-default .navbar-nav > li > a:focus,
-    .navbar-default .navbar-nav > li > a:hover {
-      
-      background-color: $color-blue;
-      text-decoration: underline;
-
-    }
-  }
   .icon-bar{
     background-color: white!important;
   }
 
-  @media#{$xs-screen}
-  {
-    .navbar-default{
-      //height: 100%;
-      li{
-        a{
-          background-color: $color-blue;
-        }
-      }
-    }
-  }
 
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+  max-height: 1000px;
+}
 
 @media only screen and (min-width:767px){
   .menu li:before,
@@ -92,14 +104,14 @@ body {
     -webkit-transition: all 0.35s ease;
     transition: all 0.35s ease;
     height: 3px;
-    width: 45%;
+    width: 40%;
     background-color: $color-blue;
     position: absolute;
     content: '';
     opacity: 0;
   }
   .menu li:before {
-    top: 0;
+    top: 5px;
     left: 0;
   }
   .menu li:after {
@@ -114,13 +126,14 @@ body {
   }
   .menu li:hover:before,
   .menu li.hover:before {
-    left: 65%;
+    left: 55%;
   }
   .menu li:hover:after,
   .menu li.hover:after {
-    right: 65%;
+    right: 55%;
 
   }
 }
+
 
 
