--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -222,10 +222,19 @@ $translateX: 0;
             font-size:20px;
             color:white;
             text-decoration: none;
-            border-bottom: 4px solid $color-blue;
-            &:hover {
-              color:$color-yellow;
-              border-bottom: 4px solid $color-yellow;
+            &:before{
+              content: "";
+              position: absolute;
+              bottom: 0;
+              left: 50%;
+              width: 10px;
+              height: 2px;
+              background: white;
+              transform: translateX(-50%);
+              transition: all .4s cubic-bezier(0.23, 1, 0.32, 1);
+            }
+            &:hover:before{
+              width: 20%;
             }
           }
 
@@ -235,31 +244,31 @@ $translateX: 0;
   }
 }
 #hamburger-icon {
-  width:$width-line;
-  height:$height-icon;
-  position:relative;
-  display:block;
+  width: $width-line;
+  height: $height-icon;
+  position: relative;
+  display: block;
 
   .line {
-    display:block;
-    background:$color;
-    width:$width-line;
-    height:$height-line;
-    position:absolute;
-    left:0;
-    border-radius:($height-line / 2);
+    display: block;
+    background: $color;
+    width: $width-line;
+    height: $height-line;
+    position: absolute;
+    left: 0;
+    border-radius: ($height-line / 2);
     transition: all $transition-time;
     -webkit-transition: all $transition-time;
     -moz-transition: all $transition-time;
 
     &.line-1 {
-      top:0;
+      top: 0;
     }
     &.line-2 {
-      top:50%;
+      top: 50%;
     }
     &.line-3 {
-      top:100%;
+      top: 100%;
     }
   }
   &:hover, &:focus {
@@ -281,7 +290,7 @@ $translateX: 0;
       -moz-transform: translateY($translateY) translateX($translateX) rotate($rotation);
     }
     .line-2 {
-      opacity:0;
+      opacity: 0;
     }
     .line-3 {
       transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
@@ -289,4 +298,8 @@ $translateX: 0;
       -moz-transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
     }
   }
+}
+
+.row{
+  margin:0;
 }
