--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -3,6 +3,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  padding-left: 0;
+  padding-right:0;
   img.design__bg{
     position: absolute;
     left: 0;
