--- a/css/style.css
+++ b/css/style.css
@@ -259,65 +259,68 @@
     .logos div .logos__row div:nth-child(6) {
       margin-left: 35%; } }
 
-.work__picture {
-  margin-top: 3%; }
-  .work__picture div {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    position: relative; }
-    .work__picture div img {
-      width: 100%;
+.work {
+  padding-left: 0px;
+  padding-right: 0px; }
+  .work__picture {
+    margin-top: 3%; }
+    .work__picture div {
       margin: 0 0 0 0;
       padding: 0 0 0 0;
-      vertical-align: top;
       position: relative; }
-  .work__picture--img:after {
-    content: '\A';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(243, 129, 129, 0.8);
-    background: -webkit-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
-    background: -o-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
-    background: -moz-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
-    background: linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
-    opacity: 0;
-    transition: all 1s;
-    -webkit-transition: all 1s; }
-  .work__picture--img:hover:after, .work__picture--img.hover:after {
-    opacity: 1; }
-  .work__picture .work__picture--overlay {
-    position: absolute;
-    z-index: 50;
-    height: 100%;
-    margin-top: -80%;
-    padding-top: 25%;
-    text-align: center;
-    width: 100%;
-    color: white;
-    opacity: 0; }
-    .work__picture .work__picture--overlay--img {
-      width: 10%; }
-    .work__picture .work__picture--overlay--textb {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 0.9em;
-      margin-top: 3%; }
-    .work__picture .work__picture--overlay--texts {
-      font-family: 'Roboto', sans-serif;
-      font-style: italic;
-      font-size: 0.8em;
-      margin-top: -3%; }
-    .work__picture .work__picture--overlay--three {
-      margin-top: -160%;
+      .work__picture div img {
+        width: 100%;
+        margin: 0 0 0 0;
+        padding: 0 0 0 0;
+        vertical-align: top;
+        position: relative; }
+    .work__picture--img:after {
+      content: '\A';
+      position: absolute;
+      width: 100%;
       height: 100%;
-      padding-top: 65%; }
-    .work__picture .work__picture--overlay:hover {
+      top: 0;
+      left: 0;
+      background: rgba(243, 129, 129, 0.8);
+      background: -webkit-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+      background: -o-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+      background: -moz-linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+      background: linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+      opacity: 0;
+      transition: all 1s;
+      -webkit-transition: all 1s; }
+    .work__picture--img:hover:after, .work__picture--img.hover:after {
       opacity: 1; }
-  .work__picture .work__picture--img:hover:after + .work__picture--overlay,
-  .work__picture .work__picture--img.hover:after + .work__picture--overlay {
-    opacity: 1; }
+    .work__picture .work__picture--overlay {
+      position: absolute;
+      z-index: 50;
+      height: 100%;
+      margin-top: -80%;
+      padding-top: 25%;
+      text-align: center;
+      width: 100%;
+      color: white;
+      opacity: 0; }
+      .work__picture .work__picture--overlay--img {
+        width: 10%; }
+      .work__picture .work__picture--overlay--textb {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 0.9em;
+        margin-top: 3%; }
+      .work__picture .work__picture--overlay--texts {
+        font-family: 'Roboto', sans-serif;
+        font-style: italic;
+        font-size: 0.8em;
+        margin-top: -3%; }
+      .work__picture .work__picture--overlay--three {
+        margin-top: -160%;
+        height: 100%;
+        padding-top: 65%; }
+      .work__picture .work__picture--overlay:hover {
+        opacity: 1; }
+    .work__picture .work__picture--img:hover:after + .work__picture--overlay,
+    .work__picture .work__picture--img.hover:after + .work__picture--overlay {
+      opacity: 1; }
 
 #banner {
   position: relative;
