--- a/css/style.css
+++ b/css/style.css
@@ -236,8 +236,8 @@
   background-color: #f8f8f8;
   padding-top: 3%;
   padding-bottom: 3%; }
-  .logos div .logos__row div {
-    text-align: center; }
+  .logos div .logos__row div img {
+    margin-left: 15%; }
     @media only screen and (max-width: 992px) {
       .logos div .logos__row div img {
         padding-top: 30px;
@@ -247,6 +247,12 @@
         width: 70%; } }
   .logos div .logos__row div:nth-child(4) {
     padding-top: 10px; }
+  @media only screen and (max-width: 499px) {
+    .logos div .logos__row div:nth-child(6) {
+      margin-top: -150px; } }
+  @media only screen and (max-width: 375px) {
+    .logos div .logos__row div:nth-child(6) {
+      margin-left: 33%; } }
   @media only screen and (max-width: 768px) {
     .logos div .logos__row div:nth-child(5),
     .logos div .logos__row div:nth-child(6) {
@@ -254,10 +260,7 @@
   @media only screen and (max-width: 480px) {
     .logos div .logos__row div:nth-child(5),
     .logos div .logos__row div:nth-child(6) {
-      margin-top: -90px; } }
-  @media only screen and (max-width: 387px) {
-    .logos div .logos__row div:nth-child(6) {
-      margin-left: 35%; } }
+      margin-top: -80px; } }
 
 .work {
   padding-left: 0px;
