--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,31 @@
     padding-top: 3%; }
     @media only screen and (max-width: 768px) {
       .meet div .col-xs-12 {
-        padding: 5% 0 0 28%; } }
+        padding: 5% 0 0 22%; } }
+    @media only screen and (max-width: 650px) {
+      .meet div .col-xs-12 {
+        padding: 5% 0 0 18%; } }
     @media only screen and (max-width: 600px) {
       .meet div .col-xs-12 {
+        padding: 5% 0 0 15%; } }
+    @media only screen and (max-width: 550px) {
+      .meet div .col-xs-12 {
+        padding: 5% 0 0 13%; } }
+    @media only screen and (max-width: 500px) {
+      .meet div .col-xs-12 {
         padding: 5% 0 0 20%; } }
-    @media only screen and (max-width: 400px) {
+    @media only screen and (max-width: 450px) {
       .meet div .col-xs-12 {
         padding: 5% 0 0 15%; } }
+    @media only screen and (max-width: 400px) {
+      .meet div .col-xs-12 {
+        padding: 5% 0 0 12%; } }
+    @media only screen and (max-width: 350px) {
+      .meet div .col-xs-12 {
+        padding: 5% 0 0 7%; } }
+    @media only screen and (max-width: 310px) {
+      .meet div .col-xs-12 {
+        padding: 5% 0 0 2%; } }
     .meet div .col-xs-12 .meet__team--people {
       width: 360px;
       height: 450px;
@@ -180,7 +198,7 @@
             padding: 10px 10px 10px 10px; } }
       @media only screen and (max-width: 768px) {
         .meet div .col-xs-12 .meet__team--imgs {
-          margin-left: 20%; }
+          margin-left: 23%; }
           .meet div .col-xs-12 .meet__team--imgs .meet__team--img {
             padding: 15px 15px 15px 15px; } }
       @media only screen and (max-width: 500px) {
@@ -215,21 +233,39 @@
         color: #e5e5e5;
         font-style: italic;
         font-size: 1em; }
+
+@media only screen and (max-width: 768px) {
+  .center {
+    padding-left: 20%; } }
+.meet__name--xs {
+  text-align: center;
+  opacity: 0;
+  position: absolute; }
+  @media only screen and (max-width: 768px) {
     .meet__name--xs {
-      opacity: 0;
-      position: absolute; }
-      @media only screen and (max-width: 768px) {
-        .meet__name--xs {
-          position: relative;
-          opacity: 1;
-          margin-left: -30%; }
-          .meet__name--xs--name {
-            font-weight: bold;
-            font-size: 1.1em; }
-          .meet__name--xs--work {
-            color: #e5e5e5;
-            font-style: italic;
-            font-size: 1em; } }
+      position: relative;
+      opacity: 1;
+      margin-left: -30%; } }
+  @media only screen and (max-width: 768px) and (max-width: 650px) {
+    .meet__name--xs {
+      margin-left: -26%; } }
+  @media only screen and (max-width: 768px) and (max-width: 550px) {
+    .meet__name--xs {
+      margin-left: -20%; } }
+  @media only screen and (max-width: 768px) and (max-width: 350px) {
+    .meet__name--xs {
+      margin-left: -15%; } }
+  @media only screen and (max-width: 768px) and (max-width: 310px) {
+    .meet__name--xs {
+      margin-left: -10%; } }
+  @media only screen and (max-width: 768px) {
+      .meet__name--xs--name {
+        font-weight: bold;
+        font-size: 1.1em; }
+      .meet__name--xs--work {
+        color: #e5e5e5;
+        font-style: italic;
+        font-size: 1em; } }
 
 .logos {
   margin-top: 3%;
