--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -5,13 +5,31 @@
       padding-top: 3%;
       @media #{$xs-screen}
       {
-        padding: 5% 0 0 28%;
+        padding: 5% 0 0 22%;
+      }
+      @media only screen and (max-width: 650px) {
+        padding: 5% 0 0 18%;
       }
       @media only screen and (max-width: 600px) {
+        padding: 5% 0 0 15%;
+      }
+      @media only screen and (max-width: 550px) {
+        padding: 5% 0 0 13%;
+      }
+      @media only screen and (max-width: 500px) {
         padding: 5% 0 0 20%;
       }
-      @media only screen and (max-width: 400px) {
+      @media only screen and (max-width: 450px) {
         padding: 5% 0 0 15%;
+      }
+      @media only screen and (max-width: 400px) {
+        padding: 5% 0 0 12%;
+      }
+      @media only screen and (max-width: 350px) {
+        padding: 5% 0 0 7%;
+      }
+      @media only screen and (max-width: 310px) {
+        padding: 5% 0 0 2%;
       }
       .meet__team {
         &--people {
@@ -213,7 +231,7 @@
             }
           }
           @media #{$xs-screen}{
-            margin-left: 20%;
+            margin-left: 23%;
             .meet__team--img {
               padding: 15px 15px 15px 15px;
             }
@@ -263,25 +281,47 @@
         font-size: 1em;
       }
     }
-    &--xs {
-      @media #{$xs-screen}{
-        position: relative;
-        opacity: 1;
-        margin-left: -30%;
-        &--name {
-          font-weight: bold;
-          font-size: 1.1em;
-        }
-        &--work {
-          color: $color-grey-middle;
-          font-style: italic;
-          font-size: 1em;
-        }
-      }
-      opacity: 0;
-      position: absolute;
+
+  }
+}
+@media#{$xs-screen}
+{
+  .center {
+    padding-left: 20%;
+  }
+}
+
+.meet__name--xs {
+  text-align: center;
+  @media #{$xs-screen}{
+    position: relative;
+    opacity: 1;
+    margin-left: -30%;
+    @media only screen and (max-width: 650px) {
+      margin-left: -26%;
+    }
+
+    @media only screen and (max-width: 550px) {
+      margin-left: -20%;
+    }
+    @media only screen and (max-width: 350px) {
+      margin-left: -15%;
+    }
+    @media only screen and (max-width: 310px) {
+      margin-left: -10%;
+    }
+    &--name {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+    &--work {
+      color: $color-grey-middle;
+      font-style: italic;
+      font-size: 1em;
     }
   }
+  opacity: 0;
+  position: absolute;
 }
 
 
