--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -7,9 +7,18 @@
       margin-left: 0;
     }
     .numbers__div{
-      height:140px;
+      height:190px;
       border-right: 1px solid white;
       width:12.5%;
+      @media(max-width:1300px){
+        height: 170px;
+      }
+      @media(max-width:1150px){
+        height: 170px;
+      }
+      @media(max-width:1000px){
+        height: 150px;
+      }
       @media(max-width:$xs){
         height:130px;
       }
